@@ -1,0 +1,1 @@
+build/cm4all-workshop-migrate usr/bin
